# rosin_diagnosis_experiments

./: .gitmodules  CMakeLists.txt  README.md
config/: camera.yaml  config.yaml
launch/: monitor.launch
rosin_cob_monitoring/: CMakeLists.txt  package.xml
rosin_cob_monitoring/config/: camera_hz.yaml
rosin_cob_monitoring/launch/: monitor.launch
rosin_diagnosis/: CMakeLists.txt  package.xml
rosin_diagnosis/config/: setup_camera.yaml
rosin_diagnosis/launch/: monitor.launch
