<?xml version="1.0"?>
<package format="2">
  <name>rosin_diagnosis</name>
  <version>0.0.0</version>
  <description>The rosin_diagnosis_experiments package</description>

  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>
  <exec_depend>tug_resource_monitor</exec_depend>

</package>
